--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
+    "@vue/cli-service": "^4.5.12",
     "bootstrap": "^4.5.2",
     "mutationobserver-shim": "^0.3.7",
     "popper.js": "^1.16.1",
