--- a/package.json
+++ b/package.json
@@ -10,28 +10,28 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.17.3",
-    "core-js": "^3.12.0",
+    "core-js": "^3.15.2",
     "rsocket-core": "0.0.25",
     "rsocket-flowable": "0.0.25",
     "rsocket-websocket-client": "0.0.25",
-    "vue": "^2.6.11",
-    "vue-router": "^3.2.0",
+    "vue": "^2.6.14",
+    "vue-router": "^3.5.2",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
     "@babel/polyfill": "^7.11.5",
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-plugin-vuex": "~4.5.0",
-    "@vue/cli-service": "^4.5.12",
+    "@vue/cli-plugin-babel": "^4.5.13",
+    "@vue/cli-plugin-router": "^4.5.13",
+    "@vue/cli-plugin-vuex": "^4.5.13",
+    "@vue/cli-service": "^4.5.13",
     "bootstrap": "^4.5.2",
     "mutationobserver-shim": "^0.3.7",
     "popper.js": "^1.16.1",
     "portal-vue": "^2.1.7",
-    "sass": "^1.26.11",
-    "sass-loader": "^10.0.2",
+    "sass": "^1.36.0",
+    "sass-loader": "^10.2.0",
     "vue-cli-plugin-bootstrap-vue": "^0.7.0",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.14"
   },
   "browserslist": [
     "> 1%",
