--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.12.0",
     "rsocket-core": "0.0.25",
     "rsocket-flowable": "0.0.25",
+    "rsocket-tcp-client": "0.0.27",
     "rsocket-websocket-client": "0.0.25",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
